# parse-dragon-bones-json

./: .gitignore  Cargo.toml  README.md
draw_skeleton/: Cargo.toml
draw_skeleton/src/: main.rs
examples/: animation_config.ron  draw_skeleton.rs  merc.rs  robot.rs  rooster.rs  sheep.rs
src/: lib.rs  runtime.rs
src/atlas_data/: mod.rs
src/shared_types/: mod.rs
src/skeleton_data/: actions.rs  animation.rs  armature.rs  bone.rs  bones.ron  ik.rs  mod.rs  skin.rs  slot.rs  transform.rs
src/test_assets/: Spider_ske.json  Spider_tex.json  a_guy_ske.json  a_guy_tex.json  merc_ske.json  merc_tex.json  robot_ske.json  robot_tex.json  rooster_ske.json  rooster_tex.json  sheep_ske.json  sheep_tex.json  test_ske.json  test_tex.json
