[package]
name = "parse-dragon-bones-json"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.8"
nalgebra = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indextree = "4.3.1"
image = "0.23.14"