[package]
name = "draw_skeleton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.8"
parse-dragon-bones-json = { path = '..' }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23.14"
nalgebra = "0.29.0"